--- a/site-markup/package.json
+++ b/site-markup/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "lint": "eslint --debug src/js/app-lnt.js --debug src/js/modules/*.js",
     "lint:write": "eslint --debug src/js/app-lnt.js --fix --debug src/js/modules/*.js --fix",
-    "prettier": "prettier --write src/js/modules/*.js --write src/js/partials/*.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "prettier --write src/js/modules/*.js --write src/js/partials/*.js"
   },
   "husky": {
     "hooks": {
